--- a/css/style.css
+++ b/css/style.css
@@ -353,18 +353,18 @@
   display: grid;
   grid-template-rows: 450px 50px 450px 50px;
   grid-template-columns: 6.5% 40% 6.5% 40% 6.5%;
-  grid-template-areas: ". ga1 . ga2 . " ".  .  .  .  . " ". ga3 . ga4 . " ".  .  .  .  . ";
-  justify-content: center;
-  /*GALERIA A*/
-  /*GALERIA B*/
-  /*GALERIA C*/
-  /*GALERIA D*/ }
+  grid-template-areas: ". ga1 . ga2 . "
+ ".  .  .  .  . "
+ ". ga3 . ga4 . "
+ ".  .  .  .  . ";
+  justify-content: center; }
   .galeria .proyectosNexus {
     grid-area: ga1;
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title1" "img1";
+    grid-template-areas: "title1"
+                          "img1";
     justify-content: center; }
     .galeria .proyectosNexus .leyendaNexus {
       grid-area: title1;
@@ -384,7 +384,8 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title2" "img2";
+    grid-template-areas: "title2"
+                          "img2";
     justify-content: center; }
     .galeria .proyectosColon .leyendaColon {
       grid-area: title2;
@@ -404,7 +405,8 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title3" "img3";
+    grid-template-areas: "title3"
+ "img3";
     justify-content: center; }
     .galeria .proyectosDedalo .leyendaDedalo {
       grid-area: title3;
@@ -424,7 +426,8 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title4" "img4";
+    grid-template-areas: "title4"
+ "img4";
     justify-content: center; }
     .galeria .proyectosLangostinos .leyendaLangostinos {
       grid-area: title4;
@@ -457,7 +460,11 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50px 50px 50px 50px 30px;
-  grid-template-areas: "area1 area2" "area3 area2" "area4 area2" "area5 area2" "area6 area6"; }
+  grid-template-areas: "area1 area2"
+ "area3 area2"
+ "area4 area2"
+ "area5 area2"
+ "area6 area6"; }
   .formContacto .nombre {
     grid-area: area1;
     border: 0.5px solid black; }
@@ -494,7 +501,9 @@
   display: grid;
   grid-template-columns: 10% 80% 10%;
   grid-template-rows: 20px auto 20px;
-  grid-template-areas: ".    .      ." ". ubicacion ." ".    .      ."; }
+  grid-template-areas: ".    .      ."
+ ". ubicacion ."
+ ".    .      ."; }
   .cajaUbicacion .ubicacion {
     grid-area: ubicacion;
     width: 100%; }
@@ -530,7 +539,12 @@
     display: grid;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 30px 30px 30px 30px 50px 30px;
-    grid-template-areas: "area1 area2 area2" "area3 area2 area2" "area4 area2 area2" "area5 area2 area2" "area6 area7 area9" "area8 area8 area8"; }
+    grid-template-areas: "area1 area2 area2"
+ "area3 area2 area2"
+ "area4 area2 area2"
+ "area5 area2 area2"
+ "area6 area7 area9"
+ "area8 area8 area8"; }
     .formCaja .formEmpleo .nombreEmpleo {
       grid-area: area1;
       border: 0.5px solid black; }
@@ -564,7 +578,8 @@
     display: grid;
     grid-template-rows: 300px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". ia2 ." ". ia4 ."; }
+    grid-template-areas: ". ia2 ."
+ ". ia4 ."; }
     .indexA .proporcionarEl {
       margin-top: 0px;
       height: 200px;
@@ -694,7 +709,8 @@
     display: grid;
     grid-template-rows: 300px 350px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: "ia1 ia2 ia3" "ia1 ia4 ia3"; }
+    grid-template-areas: "ia1 ia2 ia3"
+ "ia1 ia4 ia3"; }
     .indexA .estamosEspecialmente {
       padding: 10px;
       width: 95%;
@@ -710,7 +726,14 @@
   .galeria {
     grid-template-rows: 450px 50px 450px 50px 450px 50px 450px 50px;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ga1 ." ".  .  ." ". ga2 ." ".  .  ." ". ga3 ." ".  .  ." ". ga4 ." ".  .  ."; } }
+    grid-template-areas: ". ga1 ."
+ ".  .  ."
+ ". ga2 ."
+ ".  .  ."
+ ". ga3 ."
+ ".  .  ."
+ ". ga4 ."
+ ".  .  ."; } }
 
 @media screen and (max-width: 600px) {
   /*MEDIA HEADER*/
@@ -731,7 +754,8 @@
     display: grid;
     grid-template-rows: 250px 250PX;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ib2 ." ". ib3 ."; }
+    grid-template-areas: ". ib2 ."
+ ". ib3 ."; }
     .indexB .cajaTecnica {
       width: 100%;
       height: 255px;
@@ -753,7 +777,8 @@
   .indexC {
     grid-template-rows: 250px 250PX;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ic2 ." ". ic3 ."; }
+    grid-template-areas: ". ic2 ."
+ ". ic3 ."; }
     .indexC .cajaObra {
       width: 100%;
       height: 255px;
@@ -774,7 +799,8 @@
   .serviciosA {
     grid-template-rows: 350px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". sa3 ." ". sa2. "; }
+    grid-template-areas: ". sa3 ."
+ ". sa2. "; }
     .serviciosA .imagenResidenciales {
       grid-area: sa2;
       height: auto;
@@ -792,7 +818,8 @@
   .serviciosB {
     grid-template-rows: 400px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". sa3 ." ". sa2. "; }
+    grid-template-areas: ". sa3 ."
+ ". sa2. "; }
     .serviciosB .imagenDesarrollos {
       grid-area: sa2;
       height: auto;
@@ -829,7 +856,8 @@
     height: 180px;
     grid-template-rows: 70% 30%;
     grid-template-columns: 40% 60%;
-    grid-template-areas: " logo    redes" "leyenda leyenda"; }
+    grid-template-areas: " logo    redes"
+ "leyenda leyenda"; }
     .footer .logoVirafooter {
       position: static;
       width: 90%;
