--- a/sass/_media600px.scss
+++ b/sass/_media600px.scss
@@ -2,8 +2,12 @@
     
     /*MEDIA HEADER*/
 
-    li {
-        width: 80px;
+    .navegacionFondocaja{
+        nav{
+            li {
+                width: 80px;
+            }
+        }
     }
 
     /*MEDIA FOOTER*/
