--- a/sass/_media992px.scss
+++ b/sass/_media992px.scss
@@ -2,8 +2,12 @@
     
     /*HEADER*/
 
-    li {
-        width: 100px;
+    .navegadorFondocaja{
+        nav{
+            li {
+                width: 100px;
+            }
+        }
     }
 
     /*INDEX*/
