--- a/css/style.css
+++ b/css/style.css
@@ -353,18 +353,18 @@
   display: grid;
   grid-template-rows: 450px 50px 450px 50px;
   grid-template-columns: 6.5% 40% 6.5% 40% 6.5%;
-  grid-template-areas: ". ga1 . ga2 . "
- ".  .  .  .  . "
- ". ga3 . ga4 . "
- ".  .  .  .  . ";
-  justify-content: center; }
+  grid-template-areas: ". ga1 . ga2 . " ".  .  .  .  . " ". ga3 . ga4 . " ".  .  .  .  . ";
+  justify-content: center;
+  /*GALERIA A*/
+  /*GALERIA B*/
+  /*GALERIA C*/
+  /*GALERIA D*/ }
   .galeria .proyectosNexus {
     grid-area: ga1;
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title1"
-                          "img1";
+    grid-template-areas: "title1" "img1";
     justify-content: center; }
     .galeria .proyectosNexus .leyendaNexus {
       grid-area: title1;
@@ -384,8 +384,7 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title2"
-                          "img2";
+    grid-template-areas: "title2" "img2";
     justify-content: center; }
     .galeria .proyectosColon .leyendaColon {
       grid-area: title2;
@@ -405,8 +404,7 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title3"
- "img3";
+    grid-template-areas: "title3" "img3";
     justify-content: center; }
     .galeria .proyectosDedalo .leyendaDedalo {
       grid-area: title3;
@@ -426,8 +424,7 @@
     display: grid;
     grid-template-rows: 50px 400px;
     grid-template-columns: 100%;
-    grid-template-areas: "title4"
- "img4";
+    grid-template-areas: "title4" "img4";
     justify-content: center; }
     .galeria .proyectosLangostinos .leyendaLangostinos {
       grid-area: title4;
@@ -460,11 +457,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50px 50px 50px 50px 30px;
-  grid-template-areas: "area1 area2"
- "area3 area2"
- "area4 area2"
- "area5 area2"
- "area6 area6"; }
+  grid-template-areas: "area1 area2" "area3 area2" "area4 area2" "area5 area2" "area6 area6"; }
   .formContacto .nombre {
     grid-area: area1;
     border: 0.5px solid black; }
@@ -501,9 +494,7 @@
   display: grid;
   grid-template-columns: 10% 80% 10%;
   grid-template-rows: 20px auto 20px;
-  grid-template-areas: ".    .      ."
- ". ubicacion ."
- ".    .      ."; }
+  grid-template-areas: ".    .      ." ". ubicacion ." ".    .      ."; }
   .cajaUbicacion .ubicacion {
     grid-area: ubicacion;
     width: 100%; }
@@ -539,12 +530,7 @@
     display: grid;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 30px 30px 30px 30px 50px 30px;
-    grid-template-areas: "area1 area2 area2"
- "area3 area2 area2"
- "area4 area2 area2"
- "area5 area2 area2"
- "area6 area7 area9"
- "area8 area8 area8"; }
+    grid-template-areas: "area1 area2 area2" "area3 area2 area2" "area4 area2 area2" "area5 area2 area2" "area6 area7 area9" "area8 area8 area8"; }
     .formCaja .formEmpleo .nombreEmpleo {
       grid-area: area1;
       border: 0.5px solid black; }
@@ -578,16 +564,15 @@
     display: grid;
     grid-template-rows: 300px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". ia2 ."
- ". ia4 ."; }
+    grid-template-areas: ". ia2 ." ". ia4 ."; }
     .indexA .proporcionarEl {
       margin-top: 0px;
       height: 200px;
       width: 100%; }
     .indexA .estamosEspecialmente {
-      margin-top: 0px;
+      margin-top: 10px;
       font-size: 13px;
-      width: 95%; }
+      width: 90%; }
   /*INDEX B*/
   .indexB {
     display: grid;
@@ -648,7 +633,7 @@
 
 @media screen and (max-width: 992px) {
   /*HEADER*/
-  li {
+  .navegadorFondocaja nav li {
     width: 100px; }
   /*INDEX*/
   .somosunaEmpresa {
@@ -703,14 +688,16 @@
       height: 100%; } }
 
 @media screen and (max-width: 750px) {
+  /*MEDIA HEADER*/
+  .navegacionFondocaja nav li {
+    width: 80px; }
   /*INDEX A*/
   .indexA {
     margin-top: 80px;
     display: grid;
     grid-template-rows: 300px 350px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: "ia1 ia2 ia3"
- "ia1 ia4 ia3"; }
+    grid-template-areas: "ia1 ia2 ia3" "ia1 ia4 ia3"; }
     .indexA .estamosEspecialmente {
       padding: 10px;
       width: 95%;
@@ -726,18 +713,11 @@
   .galeria {
     grid-template-rows: 450px 50px 450px 50px 450px 50px 450px 50px;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ga1 ."
- ".  .  ."
- ". ga2 ."
- ".  .  ."
- ". ga3 ."
- ".  .  ."
- ". ga4 ."
- ".  .  ."; } }
+    grid-template-areas: ". ga1 ." ".  .  ." ". ga2 ." ".  .  ." ". ga3 ." ".  .  ." ". ga4 ." ".  .  ."; } }
 
 @media screen and (max-width: 600px) {
   /*MEDIA HEADER*/
-  li {
+  .navegacionFondocaja nav li {
     width: 80px; }
   /*MEDIA FOOTER*/
   .redesSociales {
@@ -754,8 +734,7 @@
     display: grid;
     grid-template-rows: 250px 250PX;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ib2 ."
- ". ib3 ."; }
+    grid-template-areas: ". ib2 ." ". ib3 ."; }
     .indexB .cajaTecnica {
       width: 100%;
       height: 255px;
@@ -777,8 +756,7 @@
   .indexC {
     grid-template-rows: 250px 250PX;
     grid-template-columns: 10% 80% 10%;
-    grid-template-areas: ". ic2 ."
- ". ic3 ."; }
+    grid-template-areas: ". ic2 ." ". ic3 ."; }
     .indexC .cajaObra {
       width: 100%;
       height: 255px;
@@ -799,8 +777,7 @@
   .serviciosA {
     grid-template-rows: 350px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". sa3 ."
- ". sa2. "; }
+    grid-template-areas: ". sa3 ." ". sa2. "; }
     .serviciosA .imagenResidenciales {
       grid-area: sa2;
       height: auto;
@@ -818,8 +795,7 @@
   .serviciosB {
     grid-template-rows: 400px 300px;
     grid-template-columns: 15% 70% 15%;
-    grid-template-areas: ". sa3 ."
- ". sa2. "; }
+    grid-template-areas: ". sa3 ." ". sa2. "; }
     .serviciosB .imagenDesarrollos {
       grid-area: sa2;
       height: auto;
@@ -835,12 +811,12 @@
         grid-area: sa3; } }
 
 @media screen and (max-width: 485px) {
-  nav {
+  .navegacionFondocaja nav {
     margin-right: 10px; }
-    nav li {
-      width: 70px; }
-      nav li .navegador {
-        font-size: 14px; }
+    .navegacionFondocaja nav li {
+      width: 60px; }
+      .navegacionFondocaja nav li .navegador {
+        font-size: 13px; }
   /*MEDIA INDEX A*/
   .indexA {
     grid-template-columns: 10% 80% 10%; }
@@ -856,8 +832,7 @@
     height: 180px;
     grid-template-rows: 70% 30%;
     grid-template-columns: 40% 60%;
-    grid-template-areas: " logo    redes"
- "leyenda leyenda"; }
+    grid-template-areas: " logo    redes" "leyenda leyenda"; }
     .footer .logoVirafooter {
       position: static;
       width: 90%;
