--- a/sass/_media750px.scss
+++ b/sass/_media750px.scss
@@ -1,4 +1,14 @@
 @media screen and (max-width: 750px){
+
+    /*MEDIA HEADER*/
+
+    .navegacionFondocaja{
+        nav{
+            li {
+                width: 80px;
+            }
+        }
+    }
     
     /*INDEX A*/
 
