--- a/sass/_media992px.scss
+++ b/sass/_media992px.scss
@@ -116,5 +116,18 @@
         width: 80%;
         grid-template-columns: 10% 80% 10%;
     }
+
+    /*RRHH*/
+
+    .leyendaTrabajo{
+        width: 80%;
+    }
+    
+    .formCaja {
+
+        .formEmpleo {
+            width: 80%;                  
+        }
+    }
 }
 
