--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   text-decoration: none;
   border: none;
   outline: none;
-  font-family: 'Mukta', sans-serif; }
+  font-family: 'Mukta', sans-serif;
+  overflow-x: hidden; }
 
 .obraFondoimagen {
   width: 100%;
