--- a/sass/_servicios.scss
+++ b/sass/_servicios.scss
@@ -31,6 +31,7 @@
         height: 400px;
         grid-area: sa3;
         background-color: rgb(170, 170, 170);
+        overflow-y: hidden;
 
         .tituloResidenciales{
             padding-top: 30px;
@@ -74,6 +75,7 @@
         height: 400px;
         grid-area: sa2;
         background-color: rgb(170, 170, 170);
+        overflow-y: hidden;
 
         .tituloDesarrollos{
             padding-top: 30px;
